--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,10 +20,8 @@
           <div class='profile'><%= safe_join(@user.profile.split("\n"),tag(:br)) %></div>
         </div>
         <div class="prof-right">
-          <%= image_tag 'https://ruby-sample-app.s3.ap-northeast-1.amazonaws.com/5e4aa40946575dd749b0f679b046e75145682c42.jpg' ,class: "prof_img"  %>
-          <%= image_tag 'https://ruby-sample-app.s3.ap-northeast-1.amazonaws.com/5e4aa40946575dd749b0f679b046e75145682c42.jpg' ,class: "prof_img"  %>
-          
-          
+          <img src="data:image/png;base64,<%= @user.sample_img('eda1505bd04c7684d406ef4321388902a72256f0.jpg') %>" class="prof_img"/>
+          <img src="data:image/png;base64,<%= @user.sample_img('5e4aa40946575dd749b0f679b046e75145682c42.jpg') %>" class="prof_img"/>
         </div>
       </div>
     </div>
