--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <% user = User.find(comment.user_id)%>
-<% if comment.user_id == current_user.id %>
+<% if logged_in? && comment.user_id == current_user.id %>
   <div class="balloon-right">
     <div class="faceicon">
       <% if user.avatar.present? %>
