--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -25,7 +25,7 @@
       <% end %>
     <% end %>
     <div class='order_label'>オーダーの内容</div>
-    <div class='order_body'><%= @order.body %></div>
+    <div class='order_body'><%= safe_join(@order.body.split("\n"),tag(:br)) %></div>
     
     <% if logged_in? && @order.user_id == current_user.id && @order.status == 'pending'%>
       <%= link_to 'オーダーを編集する', edit_order_path %>
